# Working-CPO

./: .gitignore  README.md  case.txt  demo.docx  demo.xlsx  main.py  pyproject.toml  report.py  resource.qrc  resource_rc.py  save_ui.py  test.py  ui_functions.py  ui_main.py  ui_main.ui  ui_main_v2.ui  ui_report.py
output/: __init__.py  canvas.py  graphics.py  report.py  ui_report.py
ui_interface/: exemple.py  resource.qrc  ui_graph.ui  ui_main_v2.ui  ui_report.ui
