[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yoonoma@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
self = "^2020.12.3"
XlsxWriter = "^3.0.3"
pandas = "^1.4.2"
numpy = "^1.22.3"
openpyxl = "^3.0.9"
matplotlib = "^3.5.1"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
